@@ -1,5 +1,11 @@
 #summary Change log
 
+*2011-03-08*
+ * Lots of improvements for the Symbian build. It runs and actually attempts to connect, but no full login yet. Soon. Soon.
+ * Quit qgvdial on uninstall.
+ * No more hard wait on Mq thread. Slot it.
+ * Stop throwing away Mq settings when it is disabled.
+
 *2011-03-03*
  * Stop using the Mosquitto cpp class. Use the bare bones C functions and build the class around it. This passes the Windows build, and we shall use it as the gold standard.
  * Windows build now works, has mosquitto support!
